--- a/pipeline_new.config
+++ b/pipeline_new.config
@@ -8,7 +8,7 @@ model {
       }
     }
     feature_extractor {
-      type: "ssd_resnet50_v1_fpn_keras"
+      type: "ssd_resnet101_v1_fpn_keras"
       depth_multiplier: 1.0
       min_depth: 16
       conv_hyperparams {
@@ -134,13 +134,7 @@ train_config {
     }
   }
   data_augmentation_options {
-    random_crop_image {
-      min_object_covered: 0.0
-      min_aspect_ratio: 0.75
-      max_aspect_ratio: 3.0
-      min_area: 0.75
-      max_area: 1.0
-      overlap_thresh: 0.0
+    ssd_random_crop {
     }
   }
   sync_replicas: true
@@ -148,18 +142,18 @@ train_config {
     momentum_optimizer {
       learning_rate {
         cosine_decay_learning_rate {
-          learning_rate_base: 0.04
-          total_steps: 25000
-          warmup_learning_rate: 0.013333
-          warmup_steps: 2000
+          learning_rate_base: 0.002
+          total_steps: 60000
+          warmup_learning_rate: 0.001
+          warmup_steps: 4000
         }
       }
       momentum_optimizer_value: 0.9
     }
     use_moving_average: false
   }
-  fine_tune_checkpoint: "/app/project/training/pre-trained-model/ssd_resnet50_v1_fpn_640x640_coco17_tpu-8/checkpoint/ckpt-0"
-  num_steps: 25000
+  fine_tune_checkpoint: "/app/project/training/pre-trained-model/ssd_resnet101_v1_fpn_640x640_coco17_tpu-8/checkpoint/ckpt-0"
+  num_steps: 40000
   startup_delay_steps: 0.0
   replicas_to_aggregate: 8
   max_number_of_boxes: 100
